Fixed timeline cards not animating on mobile

--- a/styles2.css
+++ b/styles2.css
@@ -68,12 +68,11 @@
     font-size: 40px;
     width: 100%;
     top: 50%;
-    height: 10vh;
     transform: translate(-50%, -50%);
   }
 
   .arrow {
-    top: 90%;
+    top: 85%;
     /* Reposition the arrow */
   }
 
@@ -117,31 +116,30 @@
       transition: opacity 0.5s ease, transform 0.5s ease;
     }
 
-    &:hover {
+    &:hover, &:active, &.active {
       width: 100% !important;
-
       &:after {
-        opacity: 0;
+          opacity: 0;
       }
 
       &:before {
-        opacity: 1;
-        transform: translate3d(0, 0, 0) translateY(0);
-        transition: opacity 1s ease, transform 1s ease 0.25s;
+          opacity: 1;
+          transform: translate3d(0, 0, 0) translateY(0);
+          transition: opacity 1s ease, transform 1s ease 0.25s;
       }
 
       .tl-content {
-        opacity: 1;
-        transform: translateY(0);
-        transition: all 0.75s ease 0.5s;
+          opacity: 1;
+          transform: translateY(0);
+          transition: all 0.75s ease 0.5s;
       }
 
       .tl-bg {
-        filter: grayscale(0);
+          filter: grayscale(0);
       }
 
       .tl-year {
-        opacity: 0;
+          opacity: 0;
       }
     }
   }
